# myftp

./: README.md
tcp/: autograde_server.py  client  client.c  makefile  server  server.c  serverBase.h  serverInstance.h  test  test.c  test106.data  test126.data  test163.data
tcp/client_gui/: CMakeLists.txt  autograde_client.py  client
tcp/client_gui/src/: client.h  ftpClientBase.h  ftpclientui.h  main.cpp  main.h  ui.h
tcp/output/: client  server
udp/c/: client  client.c  server  server.c
